menu listener if client logged
